<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AndroidProject.PopupOverlay">

        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:importantForAutofill="no"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="14dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutColorSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_setting"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_color"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textColor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/color_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:id="@+id/layoutNoteColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/background_note_color_1" />

                <ImageView
                    android:id="@+id/imageColor1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_baseline_done_24"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/background_note_color_2" />

                <ImageView
                    android:id="@+id/imageColor2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/background_note_color_3" />

                <ImageView
                    android:id="@+id/imageColor3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/background_note_color_4" />

                <ImageView
                    android:id="@+id/imageColor4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/background_note_color_5" />

                <ImageView
                    android:id="@+id/imageColor5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/white" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/pick_color"
                android:textColor="@color/white"
                android:textSize="13dp" />
        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ProgressBar
        android:id="@+id/progressBarSetting"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>